# Offinity_AI_coder

./: .env  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE.txt  README.md  ]  config.py  main.py  pyproject.toml  requirements.txt  start.bat  start.sh  start_web.bat  start_web.sh
